2004-12-13  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-bbc.el (shimbun-bbc-url): Update.

2004-12-12  Tsuyoshi CHO  <mfalcon21@hotmail.com>

	* shimbun/sb-cnet-jp.el (shimbun-clear-contents): Append tag
	removal: advertisement and column link.

2004-12-11  David Hansen  <david.hansen@gmx.net>

	* shimbun/sb-heise.el (shimbun-heise-get-telepolis-headers): Fixed
	bug that gave same message id to different articles.

2004-12-10  Hideyuki SHIRAI  <shirai@rdmg.mgcs.mei.co.jp>

	* w3m.el (w3m-fontify-anchors): Use 'w3m-name-anchor2 property to
	avoid overriding 'w3m-name-anchor property.
	(w3m-search-name-anchor): Search 'w3m-name-anchor2 property if
	not detect 'w3m-name-anchor property.

2004-12-08  Andreas Seltenreich  <seltenreich@gmx.de>

	* shimbun/sb-heise.el (shimbun-heise-get-telepolis-headers):
	Improve regexp used to extract id string.

2004-12-06  Katsumi Yamaoka  <yamaoka@jpl.org>

	* shimbun/sb-yomiuri.el (shimbun-yomiuri-group-table): Rewrite the
	kyoiku section.
	(shimbun-yomiuri-get-headers): Remove a special treatment for the
	kyoiku group.
	(shimbun-yomiuri-prepare-article): Rewrite the code for extracting
	article bodies in the kyoiku group.

	* shimbun/sb-nikkei.el (shimbun-nikkei-group-table): Add the
	market group; remove stockjp, exchange, stockwo-us and stockwo-eu.
	(shimbun-nikkei-get-headers-markets): Remove.
	(shimbun-nikkei-get-headers-market): New function.
	(shimbun-make-contents): Pass the header argument to sub-functions.
	(shimbun-nikkei-prepare-article-default): Ignore argument.
	(shimbun-nikkei-prepare-article-sports): Ditto.
	(shimbun-nikkei-prepare-article-newpro): Ditto.
	(shimbun-nikkei-prepare-article-release): Ditto.
	(shimbun-nikkei-prepare-article-markets): Remove.
	(shimbun-nikkei-prepare-article-market): New function.
	(shimbun-nikkei-prepare-article-okuyami): Ignore argument.

2004-12-03  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-form.el (w3m-form-parse-and-fontify): Ignore a select form